# NitroSDK

./: meson.build
include/: nitro.h
include/nitro/: env.h  ioreg.h  misc.h  types.h
include/nitro/gx/: gx_bgcnt.h
include/nitro/init/: crt0.h
include/nitro/mi/: dma.h
include/nitro/snd/common/: alarm.h  channel.h
include/simulator/: g3_draw.h  g3_handler.h  gui.h
libraries/card/: meson.build
libraries/cp/: meson.build
libraries/ctrdg/: meson.build
libraries/dgt/: meson.build
libraries/env/: meson.build
libraries/ext/: meson.build
libraries/fs/: meson.build
libraries/fx/: meson.build
libraries/gx/: meson.build
libraries/gx/src/: g3x.c  gx_load2d.c  gxasm.c
libraries/init/: meson.build
libraries/init/src/: crt0.c
libraries/math/: meson.build
libraries/mb/: meson.build
libraries/mb/src/: mb_wm_base.c
libraries/mi/: meson.build
libraries/mi/src/: mi_wram.c
libraries/os/: meson.build
libraries/os/src/: os_exception.c  os_thread.c
libraries/prc/: meson.build
libraries/pxi/: meson.build
libraries/rtc/: meson.build
libraries/sim/: meson.build
libraries/sim/cimgui/: meson.build
libraries/sim/cimgui/imgui/: imconfig.h  imgui.cpp
libraries/sim/cimgui/imgui/backends/: imgui_impl_sdl2.cpp
libraries/sim/src/: g3_handler.c  meson.build  sim_g2.c  sim_main.c
libraries/sim/src/config/: sim_config.c
libraries/sim/src/gui/: gui.c  gui_config.c  gui_g2.c  gui_net.c  gui_os.c  gui_pad.c
libraries/sim7/: meson.build
libraries/snd/: meson.build
libraries/spi/: meson.build
libraries/std/: meson.build
libraries/stubs/cw/: meson.build
libraries/stubs/isd/: meson.build
libraries/utest/: meson.build
libraries/wbt/: meson.build
libraries/wfs/: meson.build
libraries/wm/: meson.build
libraries/wvr/: meson.build
